<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/languageFromLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/languageFrom" />

    <Spinner
        android:id="@+id/languageFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/languageToLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/languageTo" />

    <Spinner
        android:id="@+id/languageTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_kilk" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="5" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_use_TTS" />
<RadioGroup
        android:id="@+id/tts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_use_GoogleTTS" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_use_FliteTTS" />
</RadioGroup>

    <TextView
        android:id="@+id/languageLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_language_label" />

    <Spinner
        android:id="@+id/languageSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_use_sound_files" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_sound_files_path" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="..." />

        <EditText
            android:id="@+id/edit1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/but"
            android:singleLine="true"
            android:text="" />
    </RelativeLayout>

    <Button
        android:id="@+id/updateDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loadOrUpdateDBfromFile" />


</LinearLayout>